change swagDock_add_seed
