# api-service/docs/swagger.json
@@ -187,7 +187,7 @@
                     {
                         "type": "integer",
                         "description": "Ingredient ID",
-                        "name": "recipe",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -197,7 +197,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.IngredientDTO"
+                            "$ref": "#/definitions/dto.IngredientAddDTO"
                         }
                     }
                 ],
@@ -232,17 +232,6 @@
                     "recipes"
                 ],
                 "summary": "Get all recipes",
-                "parameters": [
-                    {
-                        "description": "Recipe",
-                        "name": "recipe",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.IngredientDTO"
-                        }
-                    }
-                ],
                 "responses": {
                     "201": {
                         "description": "Created",
