# api-service/internal/alchemy/handlers/handlers.go
@@ -156,7 +156,6 @@ func (h *GuildHandler) CreateRecipe(w http.ResponseWriter, r *http.Request) {
 // @Summary      Get all recipes
 // @Tags         recipes
 // @Produce      json
-// @Param        recipe body dto.IngredientDTO true "Recipe"
 // @Success      201 {array} dto.IngredientResponseDTO
 // @Failure      500 {object} object
 // @Router       /recipes [get]
@@ -175,8 +174,8 @@ func (h *GuildHandler) ShowRecipes(w http.ResponseWriter, r *http.Request) {
 // @Tags         ingredients
 // @Accept       json
 // @Produce      json
-// @Param        recipe   path int               true "Ingredient ID"
-// @Param        quantity body dto.IngredientDTO true "Quantity to add"
+// @Param        id path int                  true "Ingredient ID"
+// @Param        quantity   body dto.IngredientAddDTO true "Quantity to add"
 // @Success      200 {object} dto.IngredientAddDTO
 // @Failure      400 {object} object "invalid request"
 // @Failure      404 {object} object "ingredient not found"
